--- a/SEMANA_02/04_AUT_EST_EX_OBRIGATORIOS/curriculo-html-css-js/public/index.html
+++ b/SEMANA_02/04_AUT_EST_EX_OBRIGATORIOS/curriculo-html-css-js/public/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Meu currículo</h1>
     <h2>Mateus Almeida</h2>
-    <img src="foto.jpg" alt="foto-perfil" width="200">
+    <img id="fotoperfil" src="imagens/foto.jpg" alt="foto-perfil" width="200">
     <h3>Formação</h3>
     <p>
       <ul>
@@ -39,5 +39,7 @@
       <li>Python</li>
       <li>HTML</li>
     </ul>
+    <h3>Contato</h3>
+    <p div="contato">Linkedin: <a href="https://www.linkedin.com/in/mateussda/" target="_blank" rel="external"><img src="imagens/linkedin-icon.png" alt="icone do linkedin" width="30"></a></p>
   </body>
 </html>
